azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v3.0.0/Test-AzureRmDnsAvailability.md
---
external help file: Microsoft.Azure.Commands.Network.dll-Help.xml
online version: 3bb4f77f-6ed1-4d35-87e4-f7e22c563995
schema: 2.0.0
ms.assetid: DE04BA16-C0BE-4169-8C1A-78A0E0CFB134
---

# Test-AzureRmDnsAvailability

## SYNOPSIS

## SYNTAX

```
Test-AzureRmDnsAvailability -DomainNameLabel <String> -Location <String> [<CommonParameters>]
```

## DESCRIPTION

## EXAMPLES

### 1:
```

```

## PARAMETERS

### -DomainNameLabel
```yaml
Type: String
Parameter Sets: (All)
Aliases: DomainQualifiedName

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Location
```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS


